# connecta4

./: ci.sh  dev_dependencies.txt  pyproject.toml
connecta/: .player.py.swp  connecta.py  game.py  linear_board.py  list_utils.py  match.py  oracle.py  player.py  squared_board.py
tests/: .test_linear_board.py.swp  .test_squared_board.py.swp  conftest.py  test_game.py  test_linear_board.py  test_list_utils.py  test_match.py  test_oracle.py  test_player.py  test_squared_board.py
