[tool.poetry]
name = "connecta"
version = "0.1.0"
description = ""
authors = ["Miguel Angel Pardo <mapardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifultable = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^2.4.4"
build = "^1.2.2"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
